# librarian-ui

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.production  GEMINI.md  README.md  index.html  package-lock.json  package.json  seed_db.py  start.sh  start_hf.sh  start_v2.sh  stop.sh  uniqueBooks.db  vite.config.js
.github/workflows/: deploy-frontend.yml  docker-publish.yml  ghcr-publish.yml
assets/: index--mTAhx9E.js  index-3oU_2W2Z.js  index-955vd68O.js  index-B1pn9Hvf.js  index-B3ctfx26.css  index-BC4OxNE_.js  index-BgCLoaN7.css  index-BlOsmOtr.js  index-Bv7sriot.js  index-BxCirY08.js  index-CEQqqzOm.js  index-CI37lzJS.js  index-CM4svNgL.css  index-D51YvzTP.js  index-DAcxg7J-.js  index-DBoY3WUL.css  index-DbRC571P.css  index-DdvLFv0A.css  index-G_m3fuEh.js  index-RSRzxmuk.js  index-WG42DPsf.css  index-_3AmIMAQ.js  index-fsCU2xAr.css  index-q8fFB5KW.css  index-r5qyiJ5K.js
backend/: Cargo.toml
backend/src/: main.rs  sidecar.rs
backend/src/routes/: mod.rs  overdue.rs  search.rs
evo_whatsapp_api/evolution-api/: .dockerignore  .gitignore  README.md  package-lock.json  package.json  tsup.config.ts
scripts/: clean_db.py  embed_books.py  init_db.sql  mock_embed_books.py
sidecar/: check_stats.py  db.py  embed_books.py  embedder.py  failed_books.json  generator.py  main.py  peak_optimized_unique.py  refresh_embeddings.py  requirements.txt  reset_first_books.py
src/: App.svelte  app.css
src/components/: AISearchView.svelte  AdminLoginView.svelte  AdvancedSearchView.svelte  BookCard.svelte  LibraryListView.svelte  NeuralyzerView.svelte
(+25 files in other folders)
