[package]
name    = "library-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum        = "0.7"
tokio       = { version = "1",   features = ["macros", "rt-multi-thread", "net"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
governor = "0.6"
dashmap = "5.5"
tracing = "0.1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
panic = "abort"
strip = true
